--- a/Lecture 1/7-NLP-Basics-Assessment.ipynb
+++ b/Lecture 1/7-NLP-Basics-Assessment.ipynb
@@ -22,7 +22,8 @@
    "source": [
     "# RUN THIS CELL to perform standard imports:\n",
     "import spacy\n",
-    "nlp = spacy.load('en_core_web_sm')"
+    "\n",
+    "nlp = spacy.load(\"en_core_web_sm\")"
    ]
   },
   {
@@ -35,17 +36,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Enter your code here:\n",
-    "\n"
+    "# reading the text file and storing it in a variable\n",
+    "with open('../TextFiles/owlcreek.txt', \"r\") as file:\n",
+    "    text = file.read()\n",
+    "\n",
+    "# creating the doc object\n",
+    "doc = nlp(text)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -61,7 +67,7 @@
        "into the swift water twenty feet below.  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -81,21 +87,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "4833"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of tokens: 4835\n"
+     ]
     }
    ],
-   "source": []
+   "source": [
+    "# displaying the number of tokens\n",
+    "print(\"Number of tokens:\", len(doc))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -106,22 +112,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "211"
-      ]
-     },
-     "execution_count": 5,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of sentences: 204\n"
+     ]
     }
    ],
    "source": [
-    "\n"
+    "\n",
+    "sentences = list(doc.sents)\n",
+    "print(\"Number of sentences:\", len(sentences))"
    ]
   },
   {
@@ -133,19 +138,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "A man stood upon a railroad bridge in northern Alabama, looking down\n",
-      "into the swift water twenty feet below.  \n"
-     ]
+     "data": {
+      "text/plain": [
+       "The man's hands were behind\n",
+       "his back, the wrists bound with a cord.  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-   "source": []
+   "source": [
+    "sentences[1]"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -157,86 +167,83 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A DET det a\n",
-      "man NOUN nsubj man\n",
-      "stood VERB ROOT stand\n",
-      "upon ADP prep upon\n",
-      "a DET det a\n",
-      "railroad NOUN compound railroad\n",
-      "bridge NOUN pobj bridge\n",
-      "in ADP prep in\n",
-      "northern ADJ amod northern\n",
-      "Alabama PROPN pobj alabama\n",
-      ", PUNCT punct ,\n",
-      "looking VERB advcl look\n",
-      "down PART prt down\n",
+      "The\tDET\tdet\tthe\n",
+      "man\tNOUN\tposs\tman\n",
+      "'s\tPART\tcase\t's\n",
+      "hands\tNOUN\tnsubj\thand\n",
+      "were\tAUX\tROOT\tbe\n",
+      "behind\tADP\tprep\tbehind\n",
       "\n",
-      " SPACE  \n",
+      "\tSPACE\tdep\t\n",
       "\n",
-      "into ADP prep into\n",
-      "the DET det the\n",
-      "swift ADJ amod swift\n",
-      "water NOUN pobj water\n",
-      "twenty NUM nummod twenty\n",
-      "feet NOUN npadvmod foot\n",
-      "below ADV advmod below\n",
-      ". PUNCT punct .\n",
-      "  SPACE   \n"
+      "his\tPRON\tposs\this\n",
+      "back\tNOUN\tpobj\tback\n",
+      ",\tPUNCT\tpunct\t,\n",
+      "the\tDET\tdet\tthe\n",
+      "wrists\tNOUN\tappos\twrist\n",
+      "bound\tVERB\tacl\tbind\n",
+      "with\tADP\tprep\twith\n",
+      "a\tDET\tdet\ta\n",
+      "cord\tNOUN\tpobj\tcord\n",
+      ".\tPUNCT\tpunct\t.\n",
+      " \tSPACE\tdep\t \n"
      ]
     }
    ],
    "source": [
     "# NORMAL SOLUTION:\n",
-    "\n"
+    "for token in sentences[1]:\n",
+    "    print(f\"{token.text}\\t{token.pos_}\\t{token.dep_}\\t{token.lemma_}\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "A               DET   det        a              \n",
-      "man             NOUN  nsubj      man            \n",
-      "stood           VERB  ROOT       stand          \n",
-      "upon            ADP   prep       upon           \n",
-      "a               DET   det        a              \n",
-      "railroad        NOUN  compound   railroad       \n",
-      "bridge          NOUN  pobj       bridge         \n",
-      "in              ADP   prep       in             \n",
-      "northern        ADJ   amod       northern       \n",
-      "Alabama         PROPN pobj       alabama        \n",
-      ",               PUNCT punct      ,              \n",
-      "looking         VERB  advcl      look           \n",
-      "down            PART  prt        down           \n",
+      "Text           POS            dep            lemma          \n",
+      "The            DET            det            the            \n",
+      "man            NOUN           poss           man            \n",
+      "'s             PART           case           's             \n",
+      "hands          NOUN           nsubj          hand           \n",
+      "were           AUX            ROOT           be             \n",
+      "behind         ADP            prep           behind         \n",
       "\n",
-      "               SPACE            \n",
+      "              SPACE          dep            \n",
       "              \n",
-      "into            ADP   prep       into           \n",
-      "the             DET   det        the            \n",
-      "swift           ADJ   amod       swift          \n",
-      "water           NOUN  pobj       water          \n",
-      "twenty          NUM   nummod     twenty         \n",
-      "feet            NOUN  npadvmod   foot           \n",
-      "below           ADV   advmod     below          \n",
-      ".               PUNCT punct      .              \n",
-      "                SPACE                           \n"
+      "his            PRON           poss           his            \n",
+      "back           NOUN           pobj           back           \n",
+      ",              PUNCT          punct          ,              \n",
+      "the            DET            det            the            \n",
+      "wrists         NOUN           appos          wrist          \n",
+      "bound          VERB           acl            bind           \n",
+      "with           ADP            prep           with           \n",
+      "a              DET            det            a              \n",
+      "cord           NOUN           pobj           cord           \n",
+      ".              PUNCT          punct          .              \n",
+      "               SPACE          dep                           \n"
      ]
     }
    ],
    "source": [
     "# CHALLENGE SOLUTION:\n",
-    "\n"
+    "col_widths = [15, 15, 15, 15]\n",
+    "\n",
+    "print(\"{:<{}}{:<{}}{:<{}}{:<{}}\".format(\"Text\", col_widths[0], \"POS\", col_widths[1], \"dep\", col_widths[2], \"lemma\", col_widths[3]))\n",
+    "\n",
+    "for token in sentences[1]:\n",
+    "    print(\"{:<{}}{:<{}}{:<{}}{:<{}}\".format(token.text, col_widths[0], token.pos_, col_widths[1], token.dep_, col_widths[2], token.lemma_, col_widths[3]))"
    ]
   },
   {
@@ -249,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -261,33 +268,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a pattern and add it to matcher:\n",
+    "pattern = [{\"LOWER\": \"swimming\"}, {\"IS_SPACE\": True, \"OP\": \"*\"}, {\"LOWER\": \"vigorously\"}]\n",
+    "matcher.add(\"Swimming\", [pattern])\n",
     "\n",
-    "\n",
-    "\n"
+    "matches = matcher(doc)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[(12881893835109366681, 1274, 1277), (12881893835109366681, 3607, 3610)]\n"
+      "(swimming\n",
+      "vigorously, 1274, 1277)\n",
+      "(swimming\n",
+      "vigorously, 3609, 3612)\n"
      ]
     }
    ],
    "source": [
     "# Create a list of matches called \"found_matches\" and print the list:\n",
-    "\n",
-    "\n"
+    "found_matches = [(doc[start:end], start, end) for match_id, start, end in matches]"
    ]
   },
   {
@@ -299,19 +309,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "By diving I could evade the bullets and, swimming\n",
-      "vigorously, reach the bank, take to the woods and get away home\n"
+      "evade the bullets and, swimming\n",
+      "vigorously, reach the bank,\n",
+      "shoulder; he was now swimming\n",
+      "vigorously with the current.  \n"
      ]
     }
    ],
-   "source": []
+   "source": [
+    "for match in found_matches:\n",
+    "    start = match[1] - 5  # 5 words before the match\n",
+    "    end = match[2] + 5  # 5 words after the match\n",
+    "    surrounding_text = doc[start:end]\n",
+    "    print(surrounding_text)\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -338,7 +356,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -346,25 +364,7 @@
      "output_type": "stream",
      "text": [
       "By diving I could evade the bullets and, swimming\n",
-      "vigorously, reach the bank, take to the woods and get away home.  \n"
-     ]
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "vigorously, reach the bank, take to the woods and get away home.  \n",
       "The hunted man saw all this over his shoulder; he was now swimming\n",
       "vigorously with the current.  \n"
      ]
@@ -372,8 +372,11 @@
    ],
    "source": [
     "\n",
-    "\n",
-    "\n"
+    "for match in found_matches:\n",
+    "    start = match[1]\n",
+    "    end = match[2]\n",
+    "    sentence = next(sent for sent in sentences if start <= sent.end and end >= sent.start)\n",
+    "    print(sentence)"
    ]
   }
  ],
@@ -393,7 +396,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
