--- a/Lecture 5/4-Sentiment-Analysis-Assessment.ipynb
+++ b/Lecture 5/4-Sentiment-Analysis-Assessment.ipynb
@@ -12,64 +12,114 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import spaCy and load the language library. Remember to use a larger model!\n",
-    "\n"
+    "import spacy\n",
+    "nlp = spacy.load('en_core_web_md')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dog dog 1.0\n",
+      "dog cat 0.8220816850662231\n",
+      "dog banana 0.2090904861688614\n",
+      "cat dog 0.8220816850662231\n",
+      "cat cat 1.0\n",
+      "cat banana 0.2235882729291916\n",
+      "banana dog 0.2090904861688614\n",
+      "banana cat 0.2235882729291916\n",
+      "banana banana 1.0\n",
+      "dog True 75.254234 False\n",
+      "cat True 63.188496 False\n",
+      "banana True 31.620354 False\n"
+     ]
+    }
+   ],
    "source": [
     "# Choose the words you wish to compare, and obtain their vectors\n",
+    "tokens = nlp(u'dog cat banana')  # list of spaCy tokens \n",
+    "for token1 in tokens:\n",
+    "    for token2 in tokens:\n",
+    "        print(token1.text, token2.text, token1.similarity(token2))\n",
     "\n",
-    "\n"
+    "for token in tokens:\n",
+    "    print(token.text, token.has_vector, token.vector_norm, token.is_oov)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'dog', 'you', 'somethin', 'they', 'when', 'lovin', 'all', 'nothin', 'it']\n"
+     ]
+    }
+   ],
    "source": [
-    "# Import spatial and define a cosine_similarity function\n",
+    "from scipy import spatial\n",
     "\n",
-    "\n"
+    "cosine_similarity = lambda x, y: 1 - spatial.distance.cosine(x, y)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write an expression for vector arithmetic\n",
-    "# For example: new_vector = word1 - word2 + word3\n"
+    "# For example: new_vector = word1 - word2 + word3\n",
+    "\n",
+    "dog = nlp.vocab['dog'].vector\n",
+    "cat = nlp.vocab['cat'].vector\n",
+    "banana = nlp.vocab['banana'].vector\n",
+    "\n",
+    "# Now we find the closest vector in the vocabulary to the result of \"man\" - \"woman\" + \"queen\"\n",
+    "new_vector = dog - cat + banana"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['banana', 'dog', 'you', 'somethin', 'they', 'when', 'lovin', 'all', 'nothin', 'it']\n"
+     ]
+    }
+   ],
    "source": [
     "# List the top ten closest vectors in the vocabulary to the result of the expression above\n",
+    "computed_similarities = []\n",
     "\n",
+    "for word in nlp.vocab:\n",
+    "    # Ignore words without vectors and mixed-case words:\n",
+    "    if word.has_vector:\n",
+    "        if word.is_lower:\n",
+    "            if word.is_alpha:\n",
+    "                similarity = cosine_similarity(new_vector, word.vector)\n",
+    "                computed_similarities.append((word, similarity))\n",
     "\n",
+    "computed_similarities = sorted(computed_similarities, key=lambda item: -item[1])\n",
     "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n",
-    "\n"
+    "print([w[0].text for w in computed_similarities[:10]])"
    ]
   },
   {
@@ -81,31 +131,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
     "def vector_math(a,b,c):\n",
+    "    # Obtain the vectors for the input words\n",
+    "    a_vector = nlp.vocab[a].vector\n",
+    "    b_vector = nlp.vocab[b].vector\n",
+    "    c_vector = nlp.vocab[c].vector\n",
     "    \n",
+    "    # Perform the vector arithmetic\n",
+    "    result_vector = a_vector - b_vector + c_vector\n",
     "    \n",
+    "    # Find the top ten closest vectors in the vocabulary to the result vector\n",
+    "    computed_similarities = []\n",
     "    \n",
+    "    for word in nlp.vocab:\n",
+    "        # Ignore words without vectors and mixed-case words:\n",
+    "        if word.has_vector:\n",
+    "            if word.is_lower:\n",
+    "                if word.is_alpha:\n",
+    "                    similarity = cosine_similarity(result_vector, word.vector)\n",
+    "                    computed_similarities.append((word, similarity))\n",
     "    \n",
+    "    computed_similarities = sorted(computed_similarities, key=lambda item: -item[1])\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    return [w[0].text for w in computed_similarities[:10]]\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['king',\n",
+       " 'and',\n",
+       " 'that',\n",
+       " 'havin',\n",
+       " 'where',\n",
+       " 'she',\n",
+       " 'they',\n",
+       " 'woman',\n",
+       " 'somethin',\n",
+       " 'there']"
+      ]
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test the function on known words:\n",
     "vector_math('king','man','woman')"
@@ -121,30 +201,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "[nltk_data] Downloading package vader_lexicon to\n",
+      "[nltk_data]     C:\\Users\\chris\\AppData\\Roaming\\nltk_data...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import nltk\n",
+    "nltk.download('vader_lexicon')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Import SentimentIntensityAnalyzer and create an sid object\n",
+    "from nltk.sentiment.vader import SentimentIntensityAnalyzer\n",
     "\n",
-    "\n"
+    "sid = SentimentIntensityAnalyzer()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Write a review as one continuous string (multiple sentences are ok)\n",
-    "review = ''"
+    "review = 'I loved the show, it was amazing. I appreciated the creativity despite it being a bit slow.'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'neg': 0.0, 'neu': 0.424, 'pos': 0.576, 'compound': 0.9274}"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Obtain the sid scores for your review\n",
     "sid.polarity_scores(review)"
@@ -159,25 +280,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "def review_rating(string):\n",
+    "    # Obtain the sid scores for the review\n",
+    "    scores = sid.polarity_scores(string)\n",
     "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
-    "    \n",
+    "    # Determine the sentiment label based on the compound score\n",
+    "    if scores['compound'] >= 0.05:\n",
+    "        return 'Positive'\n",
+    "    elif scores['compound'] <= -0.05:\n",
+    "        return 'Negative'\n",
+    "    else:\n",
+    "        return 'Neutral'\n",
     "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'Positive'"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Test the function on your review above:\n",
     "review_rating(review)"
@@ -200,7 +336,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.16"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
